--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cors": "^2.8.5",
     "essential-slices": "^1.0.4",
     "faker": "^5.5.3",
-    "gsap": "^3.6.1",
+    "gsap": "npm:@gsap/shockingly",
     "next": "^10.0.8",
     "next-compose-plugins": "^2.2.1",
     "next-slicezone": "^0.0.15",
