--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
-//npm.greensock.com/:_authToken=a00a31ab-6339-4e70-90bc-c1cd1dedbcfe
-@gsap:registry=https://npm.greensock.com
+always-auth=true
+@gsap:registry=https://npm.greensock.com/
+//npm.greensock.com/:_authToken=${NPM_TOKEN}
